added city table services, admin panel, refactoring